# forensic-sound-analysis

./: README.md  notebook.ipynb  pyproject.toml
fake-sound/splitted/: aku.wav.txt  bisa.wav.txt  kucing.wav.txt  pasti.wav.txt  saya.wav.txt  suka.wav.txt
sound/splitted/: aku.wav.txt  bisa.wav.txt  kucing.wav.txt  pasti.wav.txt  saya.wav.txt  suka.wav.txt
